# cs184-final-project

./: .gitignore  CLAUDE.md  CMakeLists.txt  LEARNINGS.md  TODO.md  imgui.ini
docs/research/: opencl_gl_interop.md  thin_film_iridescence.md
src/: main.cpp
src/gpu/: buffer_manager.cpp  buffer_manager.h  compute_pipeline.cpp  compute_pipeline.h  gl_check.h  render_pipeline.cpp  render_pipeline.h
src/render/: bowl_mesh.cpp  bowl_mesh.h  cloth_mesh.cpp  cloth_mesh.h
src/shaders/: adhesion.cl  bowl.frag  bowl.vert  cloth.frag  cloth.vert  constraints.cl  integrate.cl  thickness.cl
src/sim/: cloth.cpp  cloth.h  interaction.cpp  interaction.h  params.h
webpage/: index.html
